--- a/src/in/bits/blackjackclient/ui/ResultPage.form
+++ b/src/in/bits/blackjackclient/ui/ResultPage.form
@@ -84,6 +84,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Play Again"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="playAgainActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="quit">
       <Properties>
