--- a/src/in/bits/blackjackclient/ui/GameplayPage.form
+++ b/src/in/bits/blackjackclient/ui/GameplayPage.form
@@ -41,7 +41,7 @@
               <Component id="foldButton" min="-2" pref="115" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="46" max="-2" attributes="0"/>
               <Component id="quit" min="-2" pref="105" max="-2" attributes="0"/>
-              <EmptySpace pref="78" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="32767" attributes="0"/>
