--- a/src/in/bits/blackjackclient/ui/ResultPage.form
+++ b/src/in/bits/blackjackclient/ui/ResultPage.form
@@ -105,18 +105,15 @@
       <SubComponents>
         <Component class="javax.swing.JTable" name="resultTable">
           <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor" postCode="DefaultTableModel model = new DefaultTableModel();">
               <Font name="Tahoma" size="14" style="0"/>
             </Property>
-            <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="3" rowCount="3">
-                <Column editable="false" title="Name" type="java.lang.String"/>
-                <Column editable="false" title="Score" type="java.lang.String"/>
-                <Column editable="false" title="" type="java.lang.String"/>
-              </Table>
+            <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor" postCode="model.addColumn(&quot;NAME&quot;);&#xa;model.addColumn(&quot;SCORE&quot;);&#xa;model.addColumn(&quot;&quot;);">
+              <Connection code="model" type="code"/>
             </Property>
             <Property name="autoscrolls" type="boolean" value="false"/>
             <Property name="rowHeight" type="int" value="32"/>
+            <Property name="rowSelectionAllowed" type="boolean" value="false"/>
           </Properties>
         </Component>
       </SubComponents>
